438		C++			Use forward declarations instead of #includes in EU3World
439		C++			Move files around
440		C++			Make log.txt easier to read
443		C++			Use forward declarations instead of #includes in V2World
444		C++			Update data files for new countries in 2.31
447		C++			No capitalists, clerks, or craftsmen in unciv nations
448		C++			Refactor EU3 Province
449		C++			Change removal of dead landless nations to use pop ratios instead of majority culture
450		C++			Finish refactoring EU3 Province
451		C++			Refactor a bunch of EU3 classes
452		C++			Formatting of refactored classes
453		C++			Refactor EU3Country
455		C++			Refactor EU3World
456		C++			EU3 classes now with added const
457		C++			Refactor misc source files
458		C++			Remove redundant consts (don't program before having tea)
459		C++			Refactor minor V2 classes
460		C++			Refactor V2Pop
461		C++			Refactor V2Province
462		C++			Refactor V2State
463		C++			Refactor V2Country
464		C++			Refactor V2World
465		C++			Refactor Configuration
466		C++			Refactor Date
467		C++			Refactor Mapper
468		C++			Refactor EU3toV2Coverter.cpp
469		C++			More consise use of make_pair()
470		C++			Make all output functions const
471		C++			Unciv reforms give province improvements
472		C++			Configuration defaults to AHD instead of vanilla V2
473		C++			More automatic import of localisation files
475		C++			Update automated test batch files
476		C++			Add 1.4 patch to automated test cases
477		C++			1.4 patch applied to Vanilla game, not AHD
478		C++			Fix error with HttT conversions
479		C++			Fix missing culture problem with games from CK2 To Eu3 Lua converter
480		C++			Reorder province mapping around madrid so capital stays in Madrid
481		C++			Slight updates to culture mappings
482		C++			Update test batch files to use 7-Zip
483		C++			More updates to the test batch files
484		C++			Import parser improvements from CK2 To EU3
485		C++			Update readme file